# FilmPortal

./: .pdm-python  DatabaseHandler.py  FilmPortal.db  FilmPortal.sql  README.md  main.py  pyproject.toml
