[project]
name = "Portalfilm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mayuri", email = "martin.hainaut@ifosup.wavre.be"},
]
dependencies = [
    "ttkbootstrap>=1.10.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
